Prevent header text div from overlapping filters

--- a/ai-education-programs/src/styles/styles.css
+++ b/ai-education-programs/src/styles/styles.css
@@ -625,12 +625,12 @@ pre tt:after {
     z-index: 3;
     color: white;
     position: absolute;
-    top: 100px;
+    top: 220px;
     left: 0;
     right: 0;
-    bottom: 100px;
+    bottom: 500px;
     max-width: 90%;
-    height: 500px;
+    height: auto;
 }
 
 @media (min-width: 900px) {
